<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#020A1F">

    <ImageView
        android:id="@+id/splash_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_pocket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_pocket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/pocket"
        android:textColor="#FAFAFB"
        android:textSize="32sp"
        android:textStyle="bold"
        android:letterSpacing="0.03"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/splash_logo"
        app:layout_constraintBottom_toTopOf="@+id/splash_progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_sql"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/text_sql"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/sql"
        android:textColor="#019EFA"
        android:textSize="32sp"
        android:textStyle="bold"
        android:letterSpacing="0.03"
        app:layout_constraintTop_toTopOf="@+id/text_pocket"
        app:layout_constraintBottom_toBottomOf="@+id/text_pocket"
        app:layout_constraintStart_toEndOf="@+id/text_pocket"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/splash_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="156dp"
        android:indeterminateTint="#019EFA"
        app:layout_constraintTop_toBottomOf="@id/text_pocket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>